# ZTPCraft

./: .gitignore  MANIFEST.in  README.md  ZTPCraft.code-workspace  license.md  license_chencrafts.md  phys_rev_fig_settings.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
develop_docs/20260405/: handoff.md
examples/: harmonic_oscillator_overlap.ipynb  two_loop_fluxonium.ipynb  two_loop_fluxonium_fluxoid_number_jump.ipynb  two_loop_fluxonium_tunneling_assisted_jump.ipynb
scratch_notebooks/: mesolve_memory_benchmark_batched_sim.ipynb
tests/: conftest.py  test_fgr.py  test_fluxoid_model.py  test_fluxoid_transition_rates.py  test_fluxonium_flux_allocation_invariance.py  test_fluxonium_minima.py  test_fluxonium_overlap.py  test_fluxonium_overlap_caching.py  test_operators_and_overlap.py  test_oscillator_integrals_nd.py  test_oscillator_integrals_vs_scqubits.py  test_quantum_noise.py  test_sector_manager.py  test_toolbox_sweep.py  test_tunneling_assisted_incoherent_jumps.py
ztpcraft/: __init__.py  version.py
ztpcraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ztpcraft/bosonic/: __init__.py  _oscillator_integrals_1d.c  _oscillator_integrals_1d.pyi  helpers.py  input_output.py  oscillator_integrals_1d.py  oscillator_integrals_nd.py
ztpcraft/decoherence/: __init__.py  fgr.py  quantum_noise.py
ztpcraft/gpu/: __init__.py  monitor.py
ztpcraft/toolbox/: __init__.py  aedt_result_reader.py  mathematica_output_reader.py  memory_benchmark.py  mpl_figure_settings.py  mpl_helpers.py  save.py  sweep.py  units.py
ztpcraft/utils/: __init__.py  (+1 more)
(+38 files in other folders)
